--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Gentium+Basic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="style.css" />
-		<base href="/angular/">
 		
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 		<!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> -->
@@ -14,9 +13,9 @@
 		<script data-require="angular-route@1.3.5" data-semver="1.3.5" src="https://code.angularjs.org/1.3.5/angular-route.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-		<script src="/angular/app.js"></script>
-		<!-- <script src="/angular/PanelOperator.js"></script>
-		<script src="/angular/MapPageController.js"></script>		
+		<script src="app.js"></script>
+		<!-- <script src="PanelOperator.js"></script>
+		<script src="MapPageController.js"></script>		
 		<script src="MapController.js"></script> -->
 	</head>
 
