--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Gentium+Basic' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="/_css/style.css" />
+		<link rel="stylesheet" href="style.css" />
 		
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 		<!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> -->
